# noesis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FAILED.md  HYPOTHESES.md  LICENSE  README.md  ROADMAP.md  flake.nix
docs/: dsl.md  effort-frontier.md  extensions.md  memory-b0-brief.md  memory-lenses.md  policies.md  principles.md  state-and-reasoning.md  training-data-shortlist.md
docs/verdicts/: 2026-07-22-phase-b-skeleton.md
experiments/A0_3_sustained_idle/: report.py  sampler.py
experiments/A0_H12a_working_memory/: README.md  gen_triples.py  run_probe.py  summarise.py
experiments/A0_baseline/: README.md  bench.py  prompts.py  results-laptop-cpu-g1h.json  results-laptop-cpu-world.json  results-server-gpu-g1h.json  results.md  (+1 more)
memory/: README.md  event_ingest.md  schema.sql  tool_calls.md  vector_store.md
nix/: hm-module.nix  noesis-model.nix  rwkv-cpp.nix
runtime/: Cargo.toml
runtime/noesis-runtime/: Cargo.toml
runtime/noesis-runtime/src/: inference.rs  main.rs  retention.rs
runtime/noesis-runtime/src/collectors/: evdev.rs  journal.rs  mod.rs  proc_net.rs  proc_self.rs  proc_stat.rs  system_obs.rs
runtime/noesis-runtime/src/inference/: rwkv_http.rs
runtime/noesis-rwkv/: Cargo.toml
runtime/noesis-rwkv-sys/: Cargo.toml  build.rs
runtime/noesis-rwkv-sys/src/: lib.rs
runtime/noesis-rwkv/examples/: smoke.rs
runtime/noesis-rwkv/src/: lib.rs
runtime/noesis-schema/: Cargo.toml
runtime/noesis-schema/src/: lib.rs
runtime/noesis-store/: Cargo.toml
runtime/noesis-store/src/: lib.rs
training/: README.md  audit_sample.py  bootstrap_pilot_gpu.sh  extract_traces.py  light_rwkv_state_reg_patch.py  lora_train.py  sanitize.py  sanitize_patterns.py  state_reg.py  tokenize_fixture.py  train_pilot.py
(+273 files in other folders)
