[workspace]
resolver = "2"
members = [
    "noesis-schema",
    "noesis-store",
    "noesis-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Vaniell0/noesis"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process", "io-util", "net"] }
toml = "0.8"
evdev = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
