[package]
name = "noesis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "noesis-runtime"
path = "src/main.rs"

[dependencies]
noesis-schema = { path = "../noesis-schema" }
noesis-store = { path = "../noesis-store" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
toml.workspace = true
evdev.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
