[package]
name = "noesis-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
noesis-schema = { path = "../noesis-schema" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
